# artifacts/api-server/src/routes/index.ts
@@ -9,6 +9,7 @@ import authRouter from "./auth";
 import crewRouter from "./crew";
 import announcementsRouter from "./announcements";
 import schedulesRouter from "./schedules";
+import notificationsRouter from "./notifications";
 import { requireAuth } from "../middleware/require-auth";
 
 const router: IRouter = Router();
@@ -24,5 +25,6 @@ router.use("/payslips", requireAuth, payslipsRouter);
 router.use("/dashboard", requireAuth, dashboardRouter);
 router.use("/announcements", requireAuth, announcementsRouter);
 router.use("/schedules", requireAuth, schedulesRouter);
+router.use("/notifications", requireAuth, notificationsRouter);
 
 export default router;
